--- a/src/my-app.html
+++ b/src/my-app.html
@@ -94,10 +94,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <app-drawer id="drawer" slot="drawer" swipe-open="[[narrow]]">
         <app-toolbar>Menu</app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-          <a name="aboutme" href="[[rootPath]]aboutme">About me</a>
-          <a name="view2" href="[[rootPath]]view2">Skills</a>
-          <a name="view3" href="[[rootPath]]view3">View Three</a>
-          <a name="blogSocial" href="[[rootPath]]blogSocial">Social</a>
+          <template is="dom-repeat" items={{menu}}>
+            <a name="[[item.name]]" href="[[rootPath]][[item.link]]">[[item.title]]</a>
+          </template>
         </iron-selector>
       </app-drawer>
 
@@ -147,6 +146,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             reflectToAttribute: true,
             observer: '_pageChanged',
           },
+          menu: {
+            type: Object,
+            computed: '_Menu()',
+            notify: true
+          },
           routeData: Object,
           subroute: Object,
           // This shouldn't be neccessary, but the Analyzer isn't picking up
@@ -181,6 +185,28 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             null,
             this._showPage404.bind(this),
             true);
+      }
+
+      _Menu () {
+        let response = "";
+        this._getResource({
+          url: '../data/menu.json',
+          onLoad(e) {
+            response = JSON.parse(e.target.responseText);
+            console.log("Menu object: " + response);
+          },
+          onError(e) {
+            this._setFailure(true);
+          }
+        });
+        return response;
+      }
+      
+      _getResource(res, err) {
+        let xhr = new XMLHttpRequest();
+        xhr.addEventListener('load', res.onLoad.bind(this));
+        xhr.open('GET', res.url, false);
+        xhr.send();
       }
 
       _showPage404() {
